<resources>
    <string name="app_name">Trivia1.2</string>
    <string name="trivia">Trivia</string>
    <string name="question_49_50">Question: 49/50</string>
    <string name="false_btn">False</string>
    <string name="next_btn">NEXT</string>
    <string name="true_btn">True</string>
    <string name="question_text">This is the place where questions will be shown by us!</string>
    <string name="question_out_of_data">Question: %d/%d</string>
    <string name="score_0">Current Score: 00</string>
    <string name="score">Current Score: %d</string>
    <string name="highest_score_text">Highest: 00</string>
    <string name="highest_score">Highest Score: %d</string>
    <string name="prev_btn_text">PREV</string>
    <string name="share_text">Share</string>
    <string name="share">Share Score</string>
    <string name="about">About</string>
    <string name="about_text">This is Trivia 1.2 : The advance version of ,my previous Trivia App.</string>
</resources>
